# qkon-parking

./: .gitignore  .gitlab-ci.yml  Readme.MD  black.sh  ci_settings.xml  pom.xml  version.sh
.github/workflows/: java11-maven.yml
devops/ci-image/: Dockerfile  build.sh
devops/contracts-ui/: swagger-initializer.js  swagger-ui-bundle.js  swagger-ui-bundle.js.map  swagger-ui-es-bundle-core.js  swagger-ui-es-bundle-core.js.map  swagger-ui-es-bundle.js  swagger-ui-es-bundle.js.map  swagger-ui.js  swagger-ui.js.map
devops/terraform/: CI.tfvars  aws.tf  backend.tf  clearPrEnvironments.py  deploy.sh  deployCI.sh  deployDev.sh  deployPerformanceTestEnvironment.sh  destroyCI.sh  dev.tfvars  modules.tf  outputs.tf  validateTerraform.sh  validateTerraformFormatting.sh  variables.tf
shared/: buildLambaLayer.sh  requirements-test.txt  shared.yaml  test.sh
shared/shared_python/: pyproject.toml
shared/shared_python/shared_qkon/: __init__.py  qkon_auth.py  qkon_aws.py  qkon_dates.py  qkon_fastapi_utils.py  qkon_log.py  qkon_openapi.py  qkon_providers.py  qkon_utils.py  s3_key_value_store.py
shared/shared_python/tests/: test_auth.py  test_aws.py  test_dates.py  test_log.py  test_utils.py
spot-service/: contract.yaml  models.yaml  pom.xml
spot-service/devops/: prepareContract.sh
user-service/: contract.yaml  models.yaml  pom.xml  prepareArtifacts.sh  prepareContract.sh  requirements-test.txt  requirements.txt  swagger.sh  test.sh
user-service/devops/: prepareContract.sh
user-service/docs/: user-service-contract-simple.yaml
user-service/src/: main.py
(+44 files in other folders)
